# stm32-c-sandbox

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.c
app/inc/: app.h  task_button.h  task_display.h  task_heartbeat.h  task_sensor.h
app/src/: int_handlers.c  main.c  task_button.c  task_display.c  task_heartbeat.c
app/src/tasks/: task_button.c  task_display.c  task_sensor.c
lib/: CMakeLists.txt
lib/antos/: CMakeLists.txt
lib/antos/inc/: antos.h  antos_util.h
lib/antos/src/: antos.c
lib/common/: CMakeLists.txt
lib/common/inc/: bit_utils.h  slice.h
lib/driver/ssd1306/inc/: disp_buffer.h  font.h  framebuffer.h  ssd1306.h
lib/driver/ssd1306/src/: disp_buffer.c  font.c  ssd1306.c
lib/drivers/: CMakeLists.txt
lib/drivers/si7021/: CMakeLists.txt
lib/drivers/si7021/inc/: si7021.h
lib/drivers/si7021/src/: si7021.c
lib/drivers/ssd1306/: CMakeLists.txt
lib/drivers/ssd1306/inc/: ssd1306.h
lib/drivers/ssd1306/src/: font.c  framebuffer.c  ssd1306.c
lib/hal/: CMakeLists.txt
lib/hal/inc/: dma.h  gpio.h  i2c.h  platform.h  timer.h
lib/hal/port/stm32f411/: dma.c  i2c.c  platform.c  timer.c
lib/hal/stm32f411/: gpio.c  i2c.c  timer.c
lib/inc/: bit_utils.h  pool_mgr.h  resource_map.h  slice.h
lib/src/: pool_mgr.c
platform/: CMakeLists.txt
platform/stm32f411/inc/: system_stm32f4xx.h
platform/stm32f411/src/: system_stm32f4xx.c
sim/: CMakeLists.txt
sim/src/: main.c
toolchains/: arm-none-eabi-gcc.cmake  clang.cmake  gcc.cmake
